K8s/ai-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ai-deployment
  labels:
    name:  ai-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-server
  template:
    metadata:
      labels:
        app: ai-server
    spec:
      containers:
      - image:  ai-orc
        name:  ai-server
        resources:
          requests:
            cpu: "250m"
            memory: "128M" 
          limits:
            cpu: "500m"
            memory: "256M" 
        ports:
        - containerPort:  3000
          name:  ai-server-port
