K8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: frontend
        name: frontend-container
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "50m"
            memory: "64Mi"
          requests:
            cpu: "20m"
            memory: "32Mi"
        ports:
        - containerPort: 80
          name: http
